# risibot-rs

./: .environment  Cargo.toml  Secrets.toml.example  Shuttle.toml
.github/workflows/: ci.yaml
.upsun/: config.yaml
src/: bot.rs  handlers.rs  main.rs  risibank.rs
