[package]
name = "risibot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = [
    "webhooks-axum",
    "trace-adaptor",
    "rustls",
] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
shuttle-runtime = "0.45.0"
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
