[package]
name = "risibot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = [
    "webhooks-axum",
    "trace-adaptor",
    "rustls",
] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json"] }
shuttle-runtime = "0.49.0"
tokio = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
