[package]
name = "risibot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = [
    "webhooks-axum",
    "trace-adaptor",
    "rustls",
] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
